작품 감상페이지만듦, gps위치 파악 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.example.drawandwalk">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
@@ -16,7 +20,7 @@
             android:value=""/>
 
         <activity
-            android:name=".GpsDrawActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +28,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Test"/>
+
+        <activity android:name=".SelectActivity"
+            android:exported="true"/>
+        <activity android:name=".GpsDrawActivity"
+            android:exported="true"/>
+        <activity android:name=".FirstActivity"
+            android:exported="true"/>
+        <activity android:name=".DrawFilesActivity"
+            android:exported="true"/>
+        <activity android:name=".ShowDraw"
+            android:exported="true"/>
     </application>
 
 </manifest>
